feat(serdes): Adds support for serialisation of variants
(cherry picked from commit 0cf581548f19f2187b6cf27aefad4873153b4141)

--- a/modules/common/serdes/examples/CMakeLists.txt
+++ b/modules/common/serdes/examples/CMakeLists.txt
@@ -4,6 +4,8 @@
 
 define_module_example(NAME example SOURCES example.cpp)
 
+define_module_example(NAME variant_example SOURCES variant_example.cpp)
+
 define_module_example(NAME advanced_example SOURCES advanced_example.cpp advanced_example.h)
 
 define_module_example(
