fix(ipc): Simplifies what a 'topic' is
(cherry picked from commit 90c2b4f60f688f203f60dfa9220de915de071613)

--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -19,8 +19,7 @@ set(SOURCES
     include/grape/ipc/match.h
     include/grape/ipc/publisher.h
     include/grape/ipc/session.h
-    include/grape/ipc/subscriber.h
-    include/grape/ipc/topic.h)
+    include/grape/ipc/subscriber.h)
 
 # library target
 define_module_library(
