--- a/modules/robot/loco/teleop/CMakeLists.txt
+++ b/modules/robot/loco/teleop/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 declare_module(
   NAME robot_loco_teleop
-  DEPENDS_ON_MODULES "robot_loco_common;conio;ipc;log"
+  DEPENDS_ON_MODULES "robot_loco_interface;conio;ipc;log"
   DEPENDS_ON_EXTERNAL_PROJECTS "ftxui")
 
 # library sources
@@ -13,7 +13,7 @@ set(SOURCES README.md src/teleop_client.cpp include/grape/robot/loco/teleop_clie
 # library target
 define_module_library(
   NAME robot_loco_teleop_client
-  PUBLIC_LINK_LIBS "grape::robot_loco_common;grape::conio;grape::ipc;grape::log"
+  PUBLIC_LINK_LIBS "grape::robot_loco_interface;grape::conio;grape::ipc;grape::log"
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
