--- a/modules/robot/loco/arbiter/examples/CMakeLists.txt
+++ b/modules/robot/loco/arbiter/examples/CMakeLists.txt
@@ -2,4 +2,7 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(NAME example SOURCES example.cpp)
+define_module_example(
+  NAME example
+  SOURCES example.cpp
+  PUBLIC_LINK_LIBS grape::conio)
