--- a/modules/robot/loco/teleop/examples/CMakeLists.txt
+++ b/modules/robot/loco/teleop/examples/CMakeLists.txt
@@ -5,5 +5,4 @@
 define_module_example(
   NAME example
   SOURCES example.cpp
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
+  PUBLIC_LINK_LIBS "grape::conio")
