--- a/modules/camera/apps/view/CMakeLists.txt
+++ b/modules/camera/apps/view/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
-find_package(SDL3 ${SDL3_VERSION_REQUIRED} REQUIRED)
-
-add_subdirectory(view)
-add_subdirectory(pipeline)
+define_module_app(
+  NAME camera_view
+  SOURCES view.cpp
+  PUBLIC_LINK_LIBS "grape::log;grape::conio;SDL3::SDL3")
