--- a/modules/camera/apps/CMakeLists.txt
+++ b/modules/camera/apps/CMakeLists.txt
@@ -3,3 +3,5 @@
 # =================================================================================================
 
 add_subdirectory(view)
+add_subdirectory(pub)
+add_subdirectory(sub)
