feat(ipc): Updates eCAL to version 6.0.0

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -111,24 +111,45 @@ if(eCAL IN_LIST EXTERNAL_PROJECTS_LIST)
   else()
     message(STATUS "eCAL: Building ${ECAL_VERSION_REQUIRED} from source")
     set(ECAL_CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS} 
-        -DECAL_USE_CURL=OFF
-        -DECAL_USE_FTXUI=OFF
-        -DECAL_CORE_CONFIGURATION=OFF
-        -DECAL_USE_HDF5=OFF
-        -DECAL_USE_QT=OFF
-        -DECAL_BUILD_APPS=OFF
-        -DECAL_BUILD_SAMPLES=OFF
-        -DECAL_INSTALL_SAMPLE_SOURCES=OFF
-        -DECAL_CPACK_PACK_WITH_INNOSETUP=OFF
-        -DECAL_THIRDPARTY_BUILD_YAML-CPP=ON
-        -DECAL_THIRDPARTY_BUILD_TCP_PUBSUB=ON
-        -DECAL_THIRDPARTY_BUILD_PROTOBUF=ON
-        -DCMAKE_POLICY_VERSION_MINIMUM=3.5
-        -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES=cmake/submodule_dependencies.cmake)
+        -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES=cmake/submodule_dependencies.cmake 
+        -DECAL_USE_CURL=OFF 
+        -DECAL_USE_FTXUI=OFF 
+        -DECAL_USE_HDF5=OFF 
+        -DECAL_USE_QT=OFF 
+        -DECAL_USE_CAPNPROTO=OFF 
+        -DECAL_USE_FLATBUFFERS=OFF 
+        -DECAL_USE_NPCAP=OFF 
+        -DBUILD_TESTING=OFF
+        -DECAL_BUILD_DOCS=OFF 
+        -DECAL_BUILD_APPS=OFF 
+        -DECAL_BUILD_SAMPLES=OFF 
+        -DECAL_BUILD_TESTS=OFF 
+        -DECAL_BUILD_TIMEPLUGINS=OFF 
+        -DECAL_BUILD_C_BINDING=OFF 
+        -DECAL_BUILD_CSHARP_BINDING=OFF 
+        -DECAL_BUILD_PY_BINDING=OFF 
+        -DECAL_BUILD_APP_SDK=OFF 
+        -DECAL_BUILD_C_BINDING=OFF 
+        -DECAL_INSTALL_SAMPLE_SOURCES=OFF  
+        -DECAL_DEPLOY_DEPENDENCIES=OFF 
+        -DECAL_CPACK_PACK_WITH_INNOSETUP=OFF 
+        -DECAL_THIRDPARTY_BUILD_YAML-CPP=ON 
+        -DECAL_THIRDPARTY_BUILD_TCP_PUBSUB=ON 
+        -DECAL_THIRDPARTY_BUILD_PROTOBUF=ON 
+        -DECAL_THIRDPARTY_BUILD_ASIO=ON 
+        -DECAL_THIRDPARTY_BUILD_CURL=OFF 
+        -DECAL_THIRDPARTY_BUILD_FINEFTP=OFF 
+        -DECAL_THIRDPARTY_BUILD_RECYCLE=ON 
+        -DECAL_THIRDPARTY_BUILD_SPDLOG=OFF 
+        -DECAL_THIRDPARTY_BUILD_TCLAP=ON 
+        -DECAL_THIRDPARTY_BUILD_TINYXML2=OFF 
+        -DCMAKE_POLICY_VERSION_MINIMUM=3.5 
+        -DCMAKE_EXPORT_COMPILE_COMMANDS=OFF)
+
     ExternalProject_Add(
       eCAL
       GIT_REPOSITORY "https://github.com/eclipse-ecal/ecal.git"
-      GIT_TAG v${ECAL_VERSION_REQUIRED}-rc.5 # TODO(vilas): Update on release v6
+      GIT_TAG v${ECAL_VERSION_REQUIRED}
       GIT_SHALLOW true
       CMAKE_ARGS ${ECAL_CMAKE_ARGS})
   endif()
