fix: Fixes broken build

--- a/modules/camera/CMakeLists.txt
+++ b/modules/camera/CMakeLists.txt
@@ -4,7 +4,9 @@
 
 declare_module(
   NAME camera
-  DEPENDS_ON_MODULES "log"
+  DEPENDS_ON_MODULES "log;conio"
   DEPENDS_ON_EXTERNAL_PROJECTS "SDL3")
+
+find_package(SDL3 ${SDL3_VERSION_REQUIRED} REQUIRED)
 
 add_subdirectory(apps)
