feat(ipc): Introduces pub/sub templated on topic attributes

--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -4,27 +4,30 @@
 
 declare_module(
   NAME ipc
-  DEPENDS_ON_MODULES "base;utils;conio"
+  DEPENDS_ON_MODULES "base;serdes;conio"
   DEPENDS_ON_EXTERNAL_PROJECTS "eCAL")
 
-find_package(eCAL REQUIRED) # TODO(vilas): ${ECAL_VERSION_REQUIRED} REQUIRED)
+find_package(eCAL ${ECAL_VERSION_REQUIRED} REQUIRED)
 
 # library sources
 set(SOURCES
-    src/publisher.cpp
     src/session.cpp
-    src/subscriber.cpp
+    src/raw_publisher.cpp
+    src/raw_subscriber.cpp
     README.md
     include/grape/ipc/config.h
     include/grape/ipc/match.h
-    include/grape/ipc/publisher.h
     include/grape/ipc/session.h
+    include/grape/ipc/raw_publisher.h
+    include/grape/ipc/raw_subscriber.h
+    include/grape/ipc/topic_attributes.h
+    include/grape/ipc/publisher.h
     include/grape/ipc/subscriber.h)
 
 # library target
 define_module_library(
   NAME ipc
-  PUBLIC_LINK_LIBS grape::base grape::utils eCAL::core
+  PUBLIC_LINK_LIBS "grape::base;grape::serdes;eCAL::core"
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
