--- a/modules/common/ipc/tests/CMakeLists.txt
+++ b/modules/common/ipc/tests/CMakeLists.txt
@@ -2,4 +2,5 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(NAME tests SOURCES tests.cpp)
+define_module_test(NAME raw_pub_sub_tests SOURCES raw_pub_sub_tests.cpp)
+define_module_test(NAME typed_pub_sub_tests SOURCES typed_pub_sub_tests.cpp)
