--- a/modules/common/ipc/examples/CMakeLists.txt
+++ b/modules/common/ipc/examples/CMakeLists.txt
@@ -2,9 +2,13 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(NAME pub_example SOURCES pub_example.cpp)
+define_module_example(NAME raw_pub_example SOURCES raw_pub_example.cpp)
 
-define_module_example(NAME sub_example SOURCES sub_example.cpp)
+define_module_example(NAME raw_sub_example SOURCES raw_sub_example.cpp)
+
+define_module_example(NAME pub_example SOURCES topic_example.h pub_example.cpp)
+
+define_module_example(NAME sub_example SOURCES topic_example.h sub_example.cpp)
 
 define_module_example(
   NAME perf_pub
