--- a/modules/common/conio/CMakeLists.txt
+++ b/modules/common/conio/CMakeLists.txt
@@ -5,7 +5,7 @@
 declare_module(
   NAME conio
   ALWAYS_BUILD
-  DEPENDS_ON_MODULES "base;utils"
+  DEPENDS_ON_MODULES "base"
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
@@ -15,7 +15,7 @@ set(SOURCES README.md src/program_options.cpp src/conio.cpp include/grape/conio/
 # library target
 define_module_library(
   NAME conio
-  PUBLIC_LINK_LIBS grape::base grape::utils
+  PUBLIC_LINK_LIBS "grape::base"
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
