--- a/modules/probe/controller/CMakeLists.txt
+++ b/modules/probe/controller/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 declare_module(
   NAME probe_controller
-  DEPENDS_ON_MODULES "realtime;utils"
+  DEPENDS_ON_MODULES "realtime"
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
@@ -14,7 +14,7 @@ set(SOURCES src/controller.cpp README.md include/grape/probe/controller.h
 # library target
 define_module_library(
   NAME probe_controller
-  PUBLIC_LINK_LIBS grape::utils grape::realtime
+  PUBLIC_LINK_LIBS "grape::realtime"
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
