--- a/modules/common/base/tests/CMakeLists.txt
+++ b/modules/common/base/tests/CMakeLists.txt
@@ -2,4 +2,4 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(NAME tests SOURCES mpscq_tests.cpp mutex_tests.cpp)
+define_module_test(NAME tests SOURCES fifo_buffer_tests.cpp string_tests.cpp)
