fix(ipc): Adds network-scoped test
(cherry picked from commit 0fefd0f657dfeae7f74ca765734fe803a9a4c191)

--- a/modules/common/ipc/tests/CMakeLists.txt
+++ b/modules/common/ipc/tests/CMakeLists.txt
@@ -2,5 +2,6 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(NAME raw_pub_sub_tests SOURCES raw_pub_sub_tests.cpp)
-define_module_test(NAME typed_pub_sub_tests SOURCES typed_pub_sub_tests.cpp)
+define_module_test(NAME host_raw_pub_sub_test SOURCES host_raw_pub_sub_test.cpp)
+define_module_test(NAME typed_pub_sub_test SOURCES typed_pub_sub_test.cpp)
+define_module_test(NAME network_raw_pub_sub_test SOURCES network_raw_pub_sub_test.cpp)
