build: Replaces third party links to git with links to release tarballs

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -66,9 +66,8 @@ if(ftxui IN_LIST EXTERNAL_PROJECTS_LIST)
     -DFTXUI_CLANG_TIDY=OFF)
     ExternalProject_Add(
       ftxui
-      GIT_REPOSITORY "https://github.com/ArthurSonzogni/FTXUI.git"
-      GIT_TAG "v${FTXUI_VERSION_REQUIRED}"
-      GIT_SHALLOW true
+      URL https://github.com/ArthurSonzogni/FTXUI/archive/refs/tags/v${FTXUI_VERSION_REQUIRED}.tar.gz
+      URL_MD5 31860ee294b8fc2520b22f15a84dbe4c
       CMAKE_ARGS ${FTXUI_CMAKE_ARGS})
   endif()
 endif()
@@ -94,9 +93,8 @@ if(SDL3 IN_LIST EXTERNAL_PROJECTS_LIST)
       -DSDL_EXAMPLES=OFF)
     ExternalProject_Add(
       SDL3
-      GIT_REPOSITORY "https://github.com/libsdl-org/SDL"
-      GIT_TAG "release-${SDL3_VERSION_REQUIRED}"
-      GIT_SHALLOW true
+      URL https://github.com/libsdl-org/SDL/archive/refs/tags/release-${SDL3_VERSION_REQUIRED}.tar.gz
+      URL_MD5 a6ec5c70c6388a0ada3c56098220810b
       CMAKE_ARGS ${SDL3_CMAKE_ARGS})
   endif()
 endif()
@@ -148,9 +146,8 @@ if(eCAL IN_LIST EXTERNAL_PROJECTS_LIST)
 
     ExternalProject_Add(
       eCAL
-      GIT_REPOSITORY "https://github.com/eclipse-ecal/ecal.git"
-      GIT_TAG v${ECAL_VERSION_REQUIRED}
-      GIT_SHALLOW true
+      URL https://github.com/eclipse-ecal/ecal/releases/download/v${ECAL_VERSION_REQUIRED}/ecal-fat-source.tar.gz
+      URL_MD5 b709faee1c224eb6b15782db2396243a
       CMAKE_ARGS ${ECAL_CMAKE_ARGS})
   endif()
 endif()
@@ -168,9 +165,8 @@ if(lz4 IN_LIST EXTERNAL_PROJECTS_LIST)
       -DLZ4_BUILD_CLI=OFF)
     ExternalProject_Add(
       lz4
-      GIT_REPOSITORY "https://github.com/lz4/lz4.git"
-      GIT_TAG "v${LZ4_VERSION_REQUIRED}"
-      GIT_SHALLOW true
+      URL https://github.com/lz4/lz4/archive/refs/tags/v${LZ4_VERSION_REQUIRED}.tar.gz
+      URL_MD5 dead9f5f1966d9ae56e1e32761e4e675
       SOURCE_SUBDIR "build/cmake"
       CMAKE_ARGS ${LZ4_CMAKE_ARGS})
   endif()
