--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.dia filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
