--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          lfs: true
+          fetch-depth: 100
 
+      - name: Pull LFS files
+        run: git lfs pull
+          
       - name: Fetch history for versioning
         run: |
           git fetch --unshallow --tags || git fetch --depth=100 --tags
