fix(build): Fixes an erroneous install command

--- a/modules/camera/apps/pub/CMakeLists.txt
+++ b/modules/camera/apps/pub/CMakeLists.txt
@@ -9,4 +9,4 @@ define_module_app(
 
 set(CONF_DEST_DIR ${CMAKE_PROJECT_NAME}/camera_pub)
 configure_file(config.lua ${CMAKE_BINARY_DIR}/share/${CONF_DEST_DIR}/config.lua)
-install(FILES config.lua DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CONF_DEST_DIR}/config.lua)
+install(FILES config.lua DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CONF_DEST_DIR})
