feat(picam): Introduces pi camera support

--- a/modules/rpi/picam/CMakeLists.txt
+++ b/modules/rpi/picam/CMakeLists.txt
@@ -4,8 +4,8 @@
 
 declare_module(
   NAME picam
-  DEPENDS_ON_MODULES "log"
-  DEPENDS_ON_EXTERNAL_PROJECTS "SDL3")
+  DEPENDS_ON_MODULES "camera"
+  DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 set(LIBCAMERA_VERSION_REQUIRED "0.5")
 find_package(PkgConfig REQUIRED)
