feat(ipc): Adds python tests

--- a/modules/common/ipc/tests/CMakeLists.txt
+++ b/modules/common/ipc/tests/CMakeLists.txt
@@ -2,6 +2,10 @@
 # Copyright (C) 2025 GRAPE Contributors
 # =================================================================================================
 
+# C++ tests
 define_module_test(NAME host_raw_pub_sub_test SOURCES host_raw_pub_sub_test.cpp)
 define_module_test(NAME typed_pub_sub_test SOURCES typed_pub_sub_test.cpp)
 define_module_test(NAME network_raw_pub_sub_test SOURCES network_raw_pub_sub_test.cpp)
+
+# Python tests
+add_subdirectory(py)
