--- a/modules/common/realtime/CMakeLists.txt
+++ b/modules/common/realtime/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 declare_module(
   NAME realtime
-  DEPENDS_ON_MODULES "base"
+  DEPENDS_ON_MODULES "base;conio"
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
@@ -15,7 +15,7 @@ set(SOURCES
 # library target
 define_module_library(
   NAME realtime
-  PUBLIC_LINK_LIBS "grape::base"
+  PUBLIC_LINK_LIBS "grape::base;grape::conio"
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -26,3 +26,4 @@ define_module_library(
 # Subprojects
 add_subdirectory(tests)
 add_subdirectory(examples)
+add_subdirectory(apps)
