fix(ego_clock): Introduces clock identification
(cherry picked from commit 8b0f238e2458813c8fe8c54e002a27ae74004239)

--- a/modules/experimental/robot/ego_clock/benchmarks/CMakeLists.txt
+++ b/modules/experimental/robot/ego_clock/benchmarks/CMakeLists.txt
@@ -6,3 +6,8 @@ define_module_example(
   NAME line_fitter_bench
   SOURCES line_fitter_bench.cpp
   PRIVATE_LINK_LIBS benchmark::benchmark)
+
+define_module_example(
+  NAME bench
+  SOURCES ego_clock_bench.cpp
+  PRIVATE_LINK_LIBS benchmark::benchmark)
