--- a/modules/rpi/picam/examples/CMakeLists.txt
+++ b/modules/rpi/picam/examples/CMakeLists.txt
@@ -2,9 +2,12 @@
 # Copyright (C) 2025 grape contributors
 # =================================================================================================
 
-set(SOURCES list.cpp)
+define_module_example(
+  NAME hello
+  SOURCES hello.cpp
+  PRIVATE_LINK_LIBS PkgConfig::LIBCAMERA)
 
-define_module_app(
-  NAME ${MODULE_NAME}_list
-  SOURCES ${SOURCES}
+define_module_example(
+  NAME list
+  SOURCES list.cpp
   PUBLIC_LINK_LIBS PkgConfig::LIBCAMERA grape::log)
