--- a/modules/rpi/picam/apps/CMakeLists.txt
+++ b/modules/rpi/picam/apps/CMakeLists.txt
@@ -2,9 +2,4 @@
 # Copyright (C) 2025 grape contributors
 # =================================================================================================
 
-set(SOURCES hello.cpp)
-
-define_module_example(
-  NAME hello
-  SOURCES ${SOURCES}
-  PRIVATE_LINK_LIBS PkgConfig::LIBCAMERA)
+add_subdirectory(pub)
