feat: Introduces system name
(cherry picked from commit b02bea5ac89f9d573f4c178b7106e230b6aa2b34)

--- a/modules/common/utils/apps/CMakeLists.txt
+++ b/modules/common/utils/apps/CMakeLists.txt
@@ -3,3 +3,4 @@
 # =================================================================================================
 
 define_module_app(NAME show_version SOURCES show_version.cpp)
+define_module_app(NAME show_system_name SOURCES show_system_name.cpp)
