feat(realtime): Instroduces shared memory

--- a/modules/common/realtime/CMakeLists.txt
+++ b/modules/common/realtime/CMakeLists.txt
@@ -9,8 +9,14 @@ declare_module(
 
 # library sources
 set(SOURCES
-    src/schedule.cpp README.md include/grape/realtime/mpsc_queue.h include/grape/realtime/mutex.h
-    include/grape/realtime/schedule.h include/grape/realtime/thread.h)
+    src/schedule.cpp
+    src/shared_memory.cpp
+    README.md
+    include/grape/realtime/mpsc_queue.h
+    include/grape/realtime/mutex.h
+    include/grape/realtime/schedule.h
+    include/grape/realtime/shared_memory.h
+    include/grape/realtime/thread.h)
 
 # library target
 define_module_library(
