--- a/modules/common/realtime/examples/CMakeLists.txt
+++ b/modules/common/realtime/examples/CMakeLists.txt
@@ -13,3 +13,11 @@ define_module_example(
 define_module_example(NAME schedule_example SOURCES schedule_example.cpp)
 
 define_module_example(NAME thread_example SOURCES thread_example.cpp)
+
+define_module_example(NAME shm_futex_example SOURCES shm_futex_example.cpp)
+
+define_module_example(
+  NAME shared_memory_bench
+  SOURCES shared_memory_bench.cpp
+  PRIVATE_LINK_LIBS benchmark::benchmark
+  PUBLIC_LINK_LIBS "")
