--- a/modules/common/realtime/tests/CMakeLists.txt
+++ b/modules/common/realtime/tests/CMakeLists.txt
@@ -2,4 +2,4 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(NAME tests SOURCES mpscq_tests.cpp mutex_tests.cpp)
+define_module_test(NAME tests SOURCES mpscq_tests.cpp mutex_tests.cpp shared_memory_tests.cpp)
