--- a/modules/common/ipc/tests/CMakeLists.txt
+++ b/modules/common/ipc/tests/CMakeLists.txt
@@ -6,6 +6,7 @@
 define_module_test(NAME host_raw_pub_sub_test SOURCES host_raw_pub_sub_test.cpp)
 define_module_test(NAME typed_pub_sub_test SOURCES typed_pub_sub_test.cpp)
 define_module_test(NAME network_raw_pub_sub_test SOURCES network_raw_pub_sub_test.cpp)
+define_module_test(NAME session_test SOURCES session_test.cpp)
 
 # Python tests
 find_package(Python REQUIRED COMPONENTS Interpreter)
