fix(cameras): Adds log level option and simplifies pipeline
(cherry picked from commit 7382ff584e5a9b74aadb21b3c0adad95aaf43455)

--- a/modules/rpi/picam/CMakeLists.txt
+++ b/modules/rpi/picam/CMakeLists.txt
@@ -65,3 +65,4 @@ define_module_library(
   PUBLIC_LINK_LIBS "grape::camera;PkgConfig::LIBCAMERA")
 
 add_subdirectory(apps)
+add_subdirectory(examples)
