--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -93,6 +93,7 @@ if(SDL3 IN_LIST EXTERNAL_PROJECTS_LIST)
       -DSDL_RENDER=ON
       -DSDL_CAMERA=ON
       -DSDL_WAYLAND=ON
+      -DSDL_X11=OFF
       -DSDL_TEST_LIBRARY=OFF
       -DSDL_TESTS=OFF
       -DSDL_EXAMPLES=OFF)
