feat: Adds wall clock based periodic timer
(cherry picked from commit d9887cd94571e18d87b1cfea91299e03c9e758d6)

--- a/modules/common/base/CMakeLists.txt
+++ b/modules/common/base/CMakeLists.txt
@@ -7,8 +7,14 @@ declare_module(
   DEPENDS_ON_MODULES "utils"
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
-set(SOURCES include/grape/error.h include/grape/exception.h include/grape/fifo_buffer.h
-            include/grape/fixed_string.h include/grape/wall_clock.h src/exception.cpp)
+set(SOURCES
+    include/grape/error.h
+    include/grape/exception.h
+    include/grape/fifo_buffer.h
+    include/grape/fixed_string.h
+    include/grape/wall_clock.h
+    include/grape/wall_timer.h
+    src/exception.cpp)
 
 define_module_library(
   NAME base
